# test_python_manager

./: .env.dev  README.md  docker-compose.yml  dockerfile  pyproject.toml
manager/: manage.py
manager/account_journal/: admin.py  apps.py  endpoints.py  models.py  serializers.py  urls.py
manager/account_journal/migrations/: 0001_create_category_model.py  0002_create_income_model.py  0003_create_expense_model.py  0004_category_user.py  0005_expensenote_user_incomenote_user_alter_category_user.py
manager/auth_user/: admin.py  endpoints.py  models.py  serializers.py  urls.py
manager/auth_user/migrations/: 0001_initial.py  0002_user_date_created_user_date_update.py
manager/manager/: mixins.py  settings.py  urls.py
manager/sql/: dockerfile  sql_test_request.txt
